--- a/styles/login.module.css
+++ b/styles/login.module.css
@@ -6,6 +6,7 @@
     background-color: var(--black);
     background-image:linear-gradient(rgb(0 0 0 /30%), rgb(0 0 0 /60%)),
     url(/static/login-image.jpeg);
+    overflow:hidden;
 }
 
 
