--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,17 +28,18 @@
 
   --red: rgb(220, 38, 38);
   --red10: rgba(185, 28, 28, 1);
-
-  --blue: rgba(75, 85, 99, 1);
-  --blue20: rgb(55, 65, 81);
-  scrollbar-width: none;
+  --red20:rgb(99, 8, 8);
   
 }
 
 
 ::-webkit-scrollbar{
-  width:0px;
-  background:transparent;
+  width:10px;
+  background: var(--black);
+
+}
+::-webkit-scrollbar-thumb {
+  background: var(--red20);
 }
 
 
