--- a/components/searchedMovies/searchedMovies.module.css
+++ b/components/searchedMovies/searchedMovies.module.css
@@ -1,15 +1,17 @@
 
-.cardImg{
+.cardImg
+{
     object-fit: cover;
-    width:20rem;
-    height:25rem;
-    overflow:hidden;
-   
-  }
+    width: 20rem;
+    height: 25rem;
+    overflow: hidden;
+}
 
-  @media (max-width:400px){
-    .cardImg{
-        width:10rem;
-        height:15rem;
-    }
+@media (max-width: 400px)
+{
+  .cardImg
+  {
+        width: 10rem;
+        height: 15rem;
   }
+}
