--- a/components/banner/banner.module.css
+++ b/components/banner/banner.module.css
@@ -1,74 +1,88 @@
 
-.container{
-    width:100%;
-    height:90vh;
-    position:relative;
-    padding-top:5rem;
+.container
+{
+    width: 100%;
+    height: 90vh;
+    position: relative;
+    padding-top: 5rem;
 }
-.leftWrapper{
-    position:absolute;
-    width:100%;
-    height:100%;
-    z-index:10;
+
+.leftWrapper
+{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
 }
-.left{
-    display:flex;
+
+.left
+{
+    display: flex;
     justify-content: flex-start;
     padding-left: 4rem;
     padding-right:4rem;
-    height:100%;
+    height: 100%;
     flex-direction: column;
-    margin-top:6rem;
+    margin-top: 6rem;
 }
-.nseriesWrapper{
-    display:flex;
-    
+
+.nseriesWrapper 
+{
+    display: flex;
 }
-.firstLetter{
-    font-size:4rem;
+
+.firstLetter
+{
+    font-size: 4rem;
     line-height: 1rem;
-    color:var(--red);
+    color: var(--red);
     font-weight: 800;
 }
-.series{
-    font-size:1rem;
+
+.series
+{
+    font-size: 1rem;
     line-height: 1.25rem;
-    color:var(--red10);
+    color: var(--red10);
     align-self: center;
-    margin-bottom:2rem;
+    margin-bottom: 2rem;
     font-weight: bolder;
 }
-.title{
-    font-size:clamp(1.7rem,3vw,2.5rem);
+
+.title
+{
+    font-size: clamp(1.7rem,3vw,2.5rem);
     line-height: 2rem;
     font-weight: 800;
-    color:var(--white10);
-    -webkit-text-stroke:.7px rgb(0, 0, 0);
-    
+    color: var(--white10);
+    -webkit-text-stroke: .7px rgb(0, 0, 0);
 }
-.seeMoreBtn{
-    width:8rem;
-    margin-top:2rem;
+
+.seeMoreBtn
+{
+    width: 8rem;
+    margin-top: 2rem;
     background: none;
     padding: 1rem;
     background: var(--white10);
     color: var(--black10);
     border-radius: .3rem;
-    cursor:pointer;
-    font-size:1rem;
-    transition:.3s ease-in;
-  
+    cursor: pointer;
+    font-size: 1rem;
+    transition: .3s ease-in;
 }
 
-.seeMoreBtn:hover{
-    opacity:.8;
+.seeMoreBtn:hover
+{
+    opacity: .8;
 }
 
-.bannerImg{
-    position:absolute;
-    width:100%;
-    height:90vh;
-    top:0;
+.bannerImg
+{
+    position: absolute;
+    width: 100%;
+    height: 90vh;
+    top: 0;
     --tw-gradient-stops: var(--tw-gradient-from),
     var(--tw-gradient-to, rgba(0, 0, 0, 0));
     background-image: linear-gradient(to top, var(--tw-gradient-stops));
