--- a/components/cards/cards.module.css
+++ b/components/cards/cards.module.css
@@ -1,43 +1,46 @@
-.smItem {
+.smItem
+{
     position: relative;
     width: 5rem;
-    min-width:10rem;
+    min-width: 10rem;
     height: 20rem;
-
-  }
+}
   
-  .mdItem {
+.mdItem 
+{
     position: relative;
     min-width: 12rem;
     height: 20rem;
-  }
+}
   
-  .lgItem {
+.lgItem 
+{
     position: relative;
     min-width: 15rem;
     height: 25rem;
-  }
+}
 
-  .container {
+.container 
+{
     margin-right: .25rem;
     cursor: pointer;
     margin-bottom: 2rem;
-  
-  }
+}
 
-.cardImg {
+.cardImg
+{
     border-radius: 0.375rem;
     object-fit: cover;
-    object-position: center;
-   
+    object-position: center;   
 }  
 
+.imgMotionWrapper
+{
+    position: relative;
+}
 
-  .imgMotionWrapper{
-    position:relative;
-   
-   }
-   .imgMotionWrapper:hover{
-     z-index:99;
-   }
+.imgMotionWrapper:hover
+{
+     z-index: 99;
+}
   
