--- a/components/cast/cast.module.css
+++ b/components/cast/cast.module.css
@@ -1,68 +1,76 @@
-.castContainer{
-    margin-top:3rem;
-    display: grid;
-   
+.castContainer
+{
+    margin-top: 3rem;
+    display: grid;  
 }
 
-.title{
-    padding:3rem 0rem 0rem 0rem;
-    font-size:clamp(1.1rem, 2vw, 1.9rem);
+.title
+{
+    padding: 3rem 0rem 0rem 0rem;
+    font-size: clamp(1.1rem, 2vw, 1.9rem);
     text-align: center;
 }
 
-
-.container{
-    padding:1rem 3rem;
-    display:grid;
+.container
+{
+    padding: 1rem 3rem;
+    display: grid;
     place-items: center;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    margin-top:2rem;
+    margin-top: 2rem;
     row-gap: 3rem;
-    column-gap: 2rem;
-   
+    column-gap: 2rem; 
 }
 
-.castWrapper{
-    position:relative;
+.castWrapper
+{
+    position: relative;
 }
 
-.actorName{
-    position:absolute;
-    bottom:0rem;
-    z-index:10;
+.actorName
+{
+    position: absolute;
+    bottom: 0rem;
+    z-index: 10;
     background:rgba(11, 11, 11, 0.6);
-    width:100%;
+    width: 100%;
 }
 
-
-.name{
-    margin-bottom:1rem;
+.name
+{
+    margin-bottom: 1rem;
     text-indent: 1rem;
     text-align: center;
-    max-width:100%;
+    max-width: 100%;
 }
 
-.castImage{
+.castImage
+{
     object-fit: cover;
-    width:13rem;
-    height:18rem;
-    filter:grayscale(100%);
+    width: 13rem;
+    height: 18rem;
+    filter: grayscale(100%);
     transition: .2s ease-in;
-    cursor:pointer;
+    cursor: pointer;
     object-position: top;
 }
 
-.castImage:hover{
-    filter:none;
+.castImage:hover
+{
+    filter: none;
 }
 
-@media (max-width:500px){
-.castImage{
-    width:10rem;
-    height:15rem;
+@media (max-width: 500px)
+
+{
+.castImage
+{
+    width: 10rem;
+    height: 15rem;
 }
 
-.container{
+.container
+{
     grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
 }
 }
