--- a/components/searchbar/searchbar.module.css
+++ b/components/searchbar/searchbar.module.css
@@ -1,44 +1,46 @@
-.searchBarContainer{
- margin-top:10rem;
- margin-bottom:2rem;
- display:flex;
+.searchBarContainer
+{
+ margin-top: 10rem;
+ margin-bottom: 2rem;
+ display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
- width:100vw;
-
- 
+ width: 100vw;
 }
 
-.container{
-  display:flex;
+.container
+{
+  display: flex;
   justify-content: center;
   align-items: center;
   column-gap: .8rem;
   row-gap: 2rem;
   flex-wrap: wrap;
-
 }
   
-
-.searchMovie{
-   width:60%;
-   height:5rem;
-   background: var(--black20);
-   border:2px solid var(--shadow20); 
-   text-indent: 2rem; 
-   font-size:1.2rem;
-   color: var(--white20);
-   border-radius:2rem;
-   display:grid;
-   place-items: center;
+.searchMovie
+{
+  width: 60%;
+  height: 5rem;
+  background: var(--black20);
+  border: 2px solid var(--shadow20); 
+  text-indent: 2rem; 
+  font-size: 1.2rem;
+  color: var(--white20);
+  border-radius: 2rem;
+  display: grid;
+  place-items: center;
 }
 
-.searchMovie:focus{
+.searchMovie:focus
+{
   outline: none;
 }
-.moviesWrapper{
-  margin-top:3rem;
-  display:flex;
+
+.moviesWrapper
+{
+  margin-top: 3rem;
+  display: flex;
 }
 
