--- a/components/sectioncards/sectioncards.module.css
+++ b/components/sectioncards/sectioncards.module.css
@@ -1,47 +1,53 @@
-.container {
-    color: var(--blue10);
-    background-color: --var(--black50);
-    padding-left: 1rem;
-    padding-right: 1rem;
-    margin-top:3rem;
-    margin-bottom:4rem;
-  }
+.container
+{
+  color: var(--blue10);
+  background-color: --var(--black50);
+  padding-left: 1rem;
+  padding-right: 1rem;
+  margin-top: 3rem;
+  margin-bottom: 4rem;
+}
 
+.title
+{
+  color: var(--white10);
+  font-weight: 700;
+  font-size: clamp(1.4rem, 2vw, 2rem);
+}
   
-  .title {
-    color: var(--white10);
-    font-weight: 700;
-    font-size: clamp(1.4rem, 2vw, 2rem);
-  }
-  
-  .cardWrapper {
-    display: flex;
-    padding-top: 1.7rem;
-    padding-bottom: 1.5rem;
-    margin-top: 1.5rem;
-    margin-right: 0.75rem;
-    overflow-x: scroll;
-    overflow-y: hidden;
-  }
+.cardWrapper 
+{
+  display: flex;
+  padding-top: 1.7rem;
+  padding-bottom: 1.5rem;
+  margin-top: 1.5rem;
+  margin-right: 0.75rem;
+  overflow-x: scroll;
+  overflow-y: hidden;
+}
 
- .cardWrapper::-webkit-scrollbar{
-    width:10px;
-    background: var(--black);
+.cardWrapper::-webkit-scrollbar
+{
+  width: 10px;
+  background: var(--black);
+}
+
+.cardWrapper::-webkit-scrollbar-thumb
+{
+  background: var(--red20);
+   width: 10px;
+}
   
-  }
-  .cardWrapper::-webkit-scrollbar-thumb {
-    background:var(--red20);
-    width:10px;
-  }
+.cardImg:hover
+{
+  z-index: 10;
+}
   
-  
-  .cardImg:hover {
-    z-index: 10;
-  }
-  
-  @media (min-width: 768px) {
-    .container {
+@media (min-width: 768px)
+{
+  .container
+  {
       padding-left: 4rem;
       padding-right: 4rem;
-    }
   }
+}
