--- a/components/similar/similar.module.css
+++ b/components/similar/similar.module.css
@@ -1,42 +1,45 @@
 
-.container{
-    margin-top:4rem;
-    margin-bottom:3rem;
-    display:flex;
+.container
+{
+    margin-top: 4rem;
+    margin-bottom: 3rem;
+    display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    gap:1rem;
+    gap: 1rem;
 }
 
-.title{
-    padding:3rem 0rem 0rem 0rem;
-    font-size:clamp(1.1rem, 2vw, 1.9rem);
+.title
+{
+    padding: 3rem 0rem 0rem 0rem;
+    font-size: clamp(1.1rem, 2vw, 1.9rem);
     text-align: center;
 }
 
-
-.similarContainer{
+.similarContainer
+{
     display: flex;
     flex-direction: column;
     border-radius: .3rem;
 }
 
-
-.posterPath{
-    width:15rem;
-    height:25rem;
+.posterPath
+{
+    width: 15rem;
+    height: 25rem;
     object-fit: cover;
     padding-bottom: 1rem;
-    cursor:pointer;
+    cursor: pointer;
     border-radius: .3rem;
 }
 
-
-@media (max-width:500px){
-    .posterPath{
-        width:10rem;
-        height:15rem;
+@media (max-width: 500px)
+{
+    .posterPath
+    {
+        width: 10rem;
+        height: 15rem;
     }
 }
 
