--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,12 @@
-* {
+* 
+{
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
-:root {
+:root
+{
   --black: rgb(0, 0, 0);
   --black10: #181818;
   --black20: rgba(0, 0, 0, 0.6);
@@ -29,51 +31,60 @@
   --red: rgb(220, 38, 38);
   --red10: rgba(185, 28, 28, 1);
   --red20:rgb(99, 8, 8);
-  
 }
 
 
-::-webkit-scrollbar{
-  width:10px;
+::-webkit-scrollbar
+{
+  width: 10px;
   background: var(--black);
-
 }
-::-webkit-scrollbar-thumb {
+
+::-webkit-scrollbar-thumb 
+{
   background: var(--red20);
 }
 
-
 html,
-body {
+body
+{
   overflow-x: hidden;
   font-family: "Roboto Slab",serif;
   background-color: var(--black40);
   color: #ebebeb;
 }
 
-
-a {
+a
+{
   color: inherit;
   text-decoration: none;
 }
-p{
-  font-weight:500;
+
+p
+{
+  font-weight: 500;
 }
-h1 {
+
+h1
+{
   font-weight: 800;
 }
 
-h2 {
+h2
+{
   font-weight: 700;
 }
 
-h3 {
+h3
+{
   font-weight: 600;
 }
  
 
-@media (prefers-color-scheme: dark) {
-  html {
+@media (prefers-color-scheme: dark)
+{
+  html
+  {
     color-scheme: dark;
   }
 }
