--- a/styles/login.module.css
+++ b/styles/login.module.css
@@ -1,16 +1,17 @@
-.container{
-    display:grid;
-    width:100vw;
+.container
+{
+    display: grid;
+    width: 100vw;
     place-items: center;
-    min-height:100vh;
+    min-height: 100vh;
     background-color: var(--black);
-    background-image:linear-gradient(rgb(0 0 0 /30%), rgb(0 0 0 /60%)),
+    background-image: linear-gradient(rgb(0 0 0 /30%), rgb(0 0 0 /60%)),
     url(/static/login-image.jpeg);
-    overflow:hidden;
+    overflow: hidden;
 }
 
-
-.main {
+.main
+{
     width: 100%;
     position: relative;
     display: flex;
@@ -19,11 +20,11 @@
     align-items: center;
     width: 100%;
     height: 100%;
-    margin-top:4rem;
-   
-    
-  }
-  .mainWrapper {
+    margin-top: 4rem;
+}
+
+.mainWrapper
+{
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -33,82 +34,91 @@
     padding-left: 5rem;
     padding-right: 5rem;
     border-radius: .375rem;
-  
-  }
-  .input{
-    padding:.5rem 1rem;
-    color:var(--black30);
+}
+
+.input 
+{
+    padding: .5rem 1rem;
+    color: var(--black30);
     background: var(--white20);
-    height:3rem;
-    width:100%;
-    min-width:240px;
-    font-size:clamp(1.rem,2vw,1.2rem);
-    margin-top:1rem;
+    height: 3rem;
+    width: 100%;
+    min-width: 240px;
+    font-size: clamp(1.rem,2vw,1.2rem);
+    margin-top: 1rem;
+}
 
-  }
-
-  .input::placeholder{
-    font-size:clamp(.9rem, 2vw, 1rem);
+.input::placeholder
+{
+    font-size: clamp(.9rem, 2vw, 1rem);
     color: var(--black50);
-  }
+}
 
-  .title{
-    font-size:clamp(1.4rem, 2vw, 2rem);
-  }
+.title
+{
+    font-size: clamp(1.4rem, 2vw, 2rem);
+}
 
-  .text{
-    padding:.7rem 0rem;
-    font-size:clamp(1rem, 2vw, 1rem);
-  }
+.text
+{
+    padding: .7rem 0rem;
+    font-size: clamp(1rem, 2vw, 1rem);
+}
 
-  .text2{
+.text2
+{
     text-decoration: underline;
-    cursor:pointer;
+    cursor: pointer;
     letter-spacing: .1rem;
-    font-size:clamp(1rem, 2vw, 1.2rem);
-  }
+    font-size: clamp(1rem, 2vw, 1.2rem);
+}
 
-  .loginBtn{
+.loginBtn
+{
     background-color: var(--red10);
-    padding:.5rem 3rem;
-    font-size:clamp(.9rem,2vw,1rem);
+    padding: .5rem 3rem;
+    font-size: clamp(.9rem,2vw,1rem);
     line-height: 1.75rem;
-    color:var(--white10);
+    color: var(--white10);
     border-radius: .35rem;
-    margin-top:1.5rem;
-    cursor:pointer;
-    width:100%;
-    
-  }
-  .userMsg {
+    margin-top: 1.5rem;
+    cursor: pointer;
+    width: 100%;
+}
+
+.userMsg
+{
     margin-top: 0.8rem;
     color: var(--white20);
-    font-size:.8rem;
-   
-  }
+    font-size: .8rem;
+}
   
-  .signIn{
-    display:flex;
+.signIn
+{
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-  }
-  .googleIcon{
-    
+}
+
+.googleIcon
+{
     margin-right: .4rem;
-  }
+}
  
-  @media (max-width:421px){
-    .mainWrapper{
-      width:100%;
-      padding:3rem 2rem;
-    
+@media (max-width: 421px)
+{
+    .mainWrapper
+    {
+      width: 100%;
+      padding: 3rem 2rem;
     }
 
-    .loginBtn{
-      width:70%;
+    .loginBtn
+    {
+      width: 70%;
     }
-  }
+}
  
 
 
